# Agentor

./: Init-GitRepo-Agentor.ps1  README.md  agentor_backoffice.db  package-lock.json  run_backend.py  run_bo.py  run_both.py  run_frontend.py  start_backend.py  start_both.py  start_frontend.py  update_models.py
Agentor/: .flake8  ENHANCEMENTS.md  ENHANCEMENTS_SUMMARY.md  README.md  pyproject.toml  requirements.txt  setup.py
Agentor/agents/: __init__.py  abstract_agent.py  adapters.py  composition.py  enhanced_base.py  enhanced_tools.py  memory_enhanced_agent.py  reactive.py  rule_based.py  state_models.py  tool_schemas.py  utility_based.py  versioning.py  visualization.py
Agentor/agents/api/: __init__.py  cli.py  openapi.py  server.py
Agentor/agents/learning/: __init__.py  impala.py  (+4 more)
Agentor/components/: __init__.py  actions.py  coordination.py  decision.py  extraction.py  learning.py  memory.py  sensors.py
Agentor/core/: README.md  __init__.py  adapters.py  config.py  di.py  init.py  logging.py  plugin.py  registry.py
Agentor/deployment/: Dockerfile  README.md  docker-compose.yml
Agentor/environments/: custom.py  grid_world.py  simple.py
Agentor/examples/: advanced_filesystem_example.py  advanced_learning_example.py  advanced_learning_mechanisms_example.py  agent_specialization_example.py  cached_tool_registry_example.py  consensus_algorithms_example.py  coordination_patterns_example.py  enhanced_database_example.py  enhanced_learning_example.py  enhanced_learning_mechanisms_example.py  enhanced_tools_example.py  environment_example.py  environment_extensions_example.py  filesystem_resilience_example.py  learning_agent.py  memory_enhanced_agent_example.py  memory_example.py  multi_agent.py  mysql_adapter_example.py  mysql_advanced_features_example.py  mysql_connection_pooling_example.py  mysql_optimizations_example.py  mysql_performance_tuning_example.py  mysql_replication_example.py  mysql_stored_procedures_example.py  performance_optimizations_example.py  plugin_system_example.py  reactive_agent_example.py  resilience_example.py  role_based_coordination_example.py  sftp_comparison_example.py  sftp_resilience_example.py  simple_agent.py  temporal_coordination_example.py  tool_api_server_example.py  tool_composition_example.py  tool_system_improvements_example.py  updated_components_example.py  vector_db_factory_example.py  vector_db_memory_example.py
Agentor/interfaces/: api.py  database.py  filesystem.py  http_client.py  network.py  network_registry.py  websocket_client.py
Agentor/monitoring/: README.md  docker-compose.yml  start_monitoring.py
Agentor/scripts/: tool_api_server.py
Agentor/tests/: README.md  __init__.py  conftest.py  run_tests.py  test_agent.py  test_agents.py  test_components.py  test_interfaces.py  test_llm_cache.py  test_utils.py
Agentor/utils/: logging.py  serialization.py  visualization.py
(+431 files in other folders)
