[tool.poetry]
name = "agentor"
version = "0.1.0"
description = "A flexible agent framework with asynchronous support, enhanced error handling, caching, security, and monitoring"
authors = ["Agentor Team <info@agentor.ai>"]
readme = "README.md"
license = "MIT"
packages = [{include = "agentor"}]
repository = "https://github.com/agentor-ai/agentor"
homepage = "https://agentor.ai"
documentation = "https://docs.agentor.ai"
keywords = ["agent", "framework", "async", "llm", "ai", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.dependencies]
python = "^3.8"
# Core dependencies
pydantic = "^2.0.0"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
asyncio = "^3.4.3"

# LLM providers
openai = "^1.0.0"
anthropic = "^0.5.0"

# Error handling
tenacity = "^8.2.0"
circuitbreaker = "^1.4.0"

# Caching
aiocache = "^0.12.0"

# HTTP client
aiohttp = "^3.8.5"

# Security
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
lxml = "^4.9.3"

# Monitoring
prometheus-client = "^0.17.0"
opentelemetry-api = "^1.20.0"
opentelemetry-sdk = "^1.20.0"
opentelemetry-exporter-otlp = "^1.20.0"

# Embeddings
scikit-learn = "^1.3.0"
sentence-transformers = "^2.2.2"

# Vector databases
pinecone-client = {version = "^2.2.1", optional = true}
qdrant-client = {version = "^1.1.1", optional = true}
weaviate-client = {version = "^3.15.4", optional = true}
milvus = {version = "^2.2.8", optional = true}

# Token counting
tiktoken = "^0.5.1"

# Utilities
numpy = "^1.24.0"
psutil = "^5.9.5"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.1"
# Linting and formatting
flake8 = "^6.1.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"

[tool.poetry.extras]
pinecone = ["pinecone-client"]
qdrant = ["qdrant-client"]
weaviate = ["weaviate-client"]
milvus = ["milvus"]
all-vector-dbs = ["pinecone-client", "qdrant-client", "weaviate-client", "milvus"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
